# odoo-bringout-payroll_timesheet_bug_test

./: README.md  pyproject.toml
bringout_payroll_timesheet_bug_test/: __manifest__.py
bringout_payroll_timesheet_bug_test/security/: ir.model.access.csv
bringout_payroll_timesheet_bug_test/views/: menus.xml
bringout_payroll_timesheet_bug_test/wizard/: __init__.py  payroll_timesheet_bug_wizard.py  payroll_timesheet_bug_wizard_view.xml
