[project]
name = "odoo-bringout-payroll_timesheet_bug_test"
version = "16.0.1.1.1"
description = "Deliberately-buggy wizard that rewrites all timesheets' company_id — demonstrates PSQL RLS enforcement"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo>=16.0",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Framework :: Odoo",
    "Framework :: Odoo :: 16.0",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bringout_payroll_timesheet_bug_test"]
